--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
 					case 40: // down
 						if (e.shiftKey) {
 							delta *= 10;
-						} else if (e.metaKey) {
+						} else if (e.metaKey || e.altKey) {
 							delta /= 10;
 						}
 						break;
