--- a/index.html
+++ b/index.html
@@ -1,120 +1,27 @@
 <!doctype html>
 <head>
 	<title>Julia Set</title>
-	<style>
-		* {
-			padding: 0;
-			margin: 0;
-			box-sizing: border-box;
-		}
-    body {
-      font-family: arno pro;
-    }
-		h3, h4 {
-      font-family: sans-serif;
-      clear: both;
-		}
-    h3 {
-			margin: 1em 0 0.5em 0;
-    }
-    h4 {
-      margin-bottom: 0.5em;
-    }
-		button {
-			padding: 4px 8px;
-      margin-left: 8px;
-			font-size: 14px;
-      -webkit-appearance: none;
-      font-family: sans-serif;
-      color: #444;
-      background: #eee;
-      font-weight: bolder;
-      border: none;
-      float: right;
-		}
-    button:hover {
-      background: #ddd;
-    }
-    button:active {
-      background: #ccc;
-    }
-    button:disabled, input:disabled {
-      opacity: 0.6;
-    }
-    button#submit {
-      background: #4a2;
-      color: #fff;
-      text-transform: uppercase;
-    }
-		input[type=number] {
-			width: 5em;
-			border: none;
-			border-bottom: 1px dashed #888;
-			font-size: 18px;
-			font-family: arno pro, serif;
-      background: transparent;
-      height: 24px;
-      line-height: 24px;
-		}
-		input[type=number]:focus {
-			outline: 0;
-			border-color: #444;
-			background: #fafafa;
-		}
-    input[type=checkbox] {
-      vertical-align: middle;
-    }
-    table {
-      width: 100%;
-    }
-    table td {
-      padding: 2px 4px;
-    }
-    table td label {
-      vertical-align: top;
-    }
-		#palette-editor input[type=number] {
-			width: 3em;
-		}
-    table tr td:nth-of-type(2n+1) {
-      text-align: right;
-    }
-		.radio {
-			display: inline-block;
-			vertical-align: top;
-			padding-right: 32px;
-		}
-		img { display: block }
-		form, #images {
-			display: inline-block;
-			vertical-align: top;
-			padding: 32px;
-		}
-		.eqn {
-			text-align: center;
-			font-size: 24px;
-			margin: 16px;
-		}
-		#parameter, #parameter input[type=number] {
-			font-size: 20px;
-		}
-    #parameter input[type=number] {
-      width: 7em;
-    }
-    .knobs {
-      padding: 8px;
-      margin: 8px 0;
-      border: 1px solid #eee;
-      border-radius: 2px;
-    }
-    .knobs ul {
-      list-style-type: none;
-    }
-	</style>
+  <link rel="stylesheet" href="/static/fractal.css">
 </head>
 <body>
 	<form id="knob-panel">
-		<p class=eqn>ƒ<sub><i>c</i></sub>(<i>z</i>) = <i>z</i><sup>2</sup> + <i>c</i></p>
+    <div class="radio knobs">
+      <h4>Fractal type</h4>
+      <ul>
+        <li>
+          <input type="radio" name="fractal-type" id="mandelbrot-type" value="mandelbrot" checked>
+          <label for="mandelbrot-type">Mandelbrot set</label>
+        </li>
+        <li>
+          <input type="radio" name="fractal-type" id="julia-type" value="julia">
+          <label for="julia-type">Julia set</label>
+        </li>
+      </ul>
+    </div>
+    <div class="radio knobs">
+      <h4>Iterated function</h4>
+      <p class=eqn>ƒ<sub><i>c</i></sub>(<i>z</i>) = <i>z</i><sup>2</sup> + <i>c</i></p>
+    </div>
 		<h3>Function parameters</h3>
 		<div id=parameter class="knobs">
 			<span><i>c</i> = <input name=re type=number value=0 step=0.01> +
@@ -182,8 +89,8 @@
           <label for=png>PNG (bigger)</label>
         </li>
         <li>
-          <input name=format type=radio id=jpeg value=jpeg checked>
-          <label for=jpeg>JPEG (smaller)</label>
+          <input name=format type=radio id=jpg value=jpg checked>
+          <label for=jpg>JPEG (smaller)</label>
         </li>
       </ul>
     </div>
@@ -227,279 +134,5 @@
 	<div id=images>
 		<img id=fractal>
 	</div>
-	<script>
-		var vars = {
-			"a": -20, "b": 1, "c": -20, "d": 11,
-			"e": -20, "f": 5, "g": -20, "h": 15,
-			"i": -20, "j": 9, "k": -20, "l": 19,
-			"re": -0.505, "im": 0.523,
-      "rePos": 0, "imPos": 0,
-			"scale": 0, "width": 512, "height": 512,
-      "iterations": 255
-		};
-
-		var fractal, palette, inputs;
-		var submit, random, randomColors;
-    var center;
-    var stuck = false;
-
-		function setVar(key, val) {
-			document.querySelector('[name=' + key + ']').value = vars[key] = val;
-		}
-
-		function radioValue(s) {
-			var inputs = document.getElementsByName(s);
-			for (var i = 0, input; input = inputs[i]; i++) {
-				if (input.checked) {
-					return input.value;
-				}
-			}
-		}
-
-		function stick(stickButtons) {
-      stuck = true;
-			for (var i = 0, input; input = inputs[i]; i++) {
-				input.setAttribute('disabled', true);
-			}
-			if (stickButtons) {
-				submit.setAttribute('disabled', true);
-				submit.innerText = "Rendering...";
-				random.setAttribute('disabled', true);
-			}
-		}
-
-		function unstick() {
-			for (var i = 0, input; input = inputs[i]; i++) {
-        if (!input.dataset.leaveDisabled) {
-          input.removeAttribute('disabled');
-        }
-			}
-			submit.removeAttribute('disabled');
-			submit.innerText = "Render";
-			random.removeAttribute("disabled");
-      stuck = false;
-		}
-
-		function updatePalette() {
-			var q = [];
-			"abcdefghijkl".split("").forEach(function(key) {
-				q.push(key + "=" + vars[key]);
-			})
-			var args = q.join("&");
-
-			stick(false);
-			palette.addEventListener("load", function() {
-				unstick();
-				palette.removeEventListener("load");
-			});
-			palette.setAttribute("src", "/palette.png?" + args);
-		}
-
-		function updateFractal(e) {
-			var q = [];
-			for (var key in vars) {
-				q.push(key + "=" + vars[key]);
-			}
-			q.push('palette=' + radioValue('palette'));
-			q.push('coloring=' + radioValue('coloring'));
-      q.push('center=' + center.checked);
-			var args = q.join("&");
-
-			stick(true);
-			var se;
-      try {
-				se = e.target.selectionEnd;
-      } catch (e) {
-        se = null;
-      }
-
-			fractal.addEventListener("load", function() {
-				unstick();
-				if (se != null && e.target.setSelectionRange) {
-					e.target.focus();
-					e.target.setSelectionRange(se, se);
-				}
-				fractal.removeEventListener("load");
-			});
-
-      var endpoint;
-      var format = radioValue("format");
-      switch (format) {
-      case "png":
-        endpoint = "/julia.png";
-        break;
-      case "jpeg":
-        endpoint = "/julia.jpg";
-        break;
-      default:
-        alert("Invalid format: " + format);
-        return;
-      }
-
-			fractal.setAttribute("src", endpoint + "?" + args);
-		}
-
-		window.addEventListener("DOMContentLoaded", function() {
-			for (var key in vars) {
-				document.querySelector("[name=" + key + "]").value = vars[key];
-			}
-
-			fractal      = document.querySelector('#fractal');
-			palette      = document.querySelector('#palette');
-			inputs       = document.querySelectorAll('input');
-			submit       = document.querySelector('#submit');
-			random       = document.querySelector("#random");
-			randomColors = document.querySelector('#random-colors');
-      center       = document.querySelector("#center");
-
-			for (var i = 0, input; input = inputs[i]; i++) {
-				input.addEventListener("input", function(e) {
-					var name = e.target.getAttribute("name");
-					vars[name] = e.target.value;
-					// the colors all have 1 length names
-					if (name.length === 1) {
-						updatePalette();
-						if (radioValue("palette") === "gray") {
-							return;
-						}
-					}
-					// update immediately unless it's something potentially very expensive
-					if (name !== "width" && name !== "height" && name !== "iterations") {
-						updateFractal(e);
-					}
-				});
-				input.addEventListener("keydown", function(e) {
-          if (e.target.hasAttribute("disabled")) {
-            return;
-          }
-					var delta = +e.target.getAttribute("step") || 0.01;
-
-					switch (e.keyCode) {
-					case 38: // up
-					case 40: // down
-						if (e.shiftKey) {
-							delta *= 10;
-						} else if (e.metaKey || e.altKey) {
-							delta /= 10;
-						}
-						break;
-					default:
-						return true;
-					}
-					e.preventDefault();
-
-          var deltaParts = delta.toString().split('.');
-          var deltaPrec = deltaParts.length >= 2 ? deltaParts[1].length : 0;
-
-					if (e.keyCode == 40) {
-						delta = -delta;
-					}
-
-          // round bad float values
-          /*
-          var oldParts = e.target.value.split('.');
-          var oldPrec = oldParts.length >= 2 ? oldParts[1].length : 0;
-
-          var parts = newValue.toString().split('.');
-          var prec = parts.length >= 2 ? parts[1].length : 0;
-
-          // check if the floating point precision added too many decimals
-          if (prec - oldPrec > deltaPrec) {
-            prec--;
-          }
-
-					e.target.value = +newValue.toFixed(prec);
-          */
-          var newValue = +e.target.value + delta;
-          e.target.value = +newValue.toFixed(deltaPrec);
-					e.target.dispatchEvent(new Event('input'));
-				}, true);
-			}
-
-			updateFractal();
-			updatePalette();
-			submit.addEventListener("click", updateFractal);
-      center.addEventListener("click", updateFractal);
-
-      var rePos = document.querySelector("#rePos");
-      var imPos = document.querySelector("#imPos");
-      center.addEventListener("click", function(e) {
-        if (e.target.checked) {
-          rePos.dataset.leaveDisabled = true;
-          rePos.dataset.old = rePos.value;
-          rePos.value = vars.re;
-          imPos.dataset.leaveDisabled = true;
-          imPos.dataset.old = imPos.value;
-          imPos.value = vars.im;
-        } else {
-          rePos.removeAttribute("disabled");
-          delete rePos.dataset.leaveDisabled;
-          rePos.value = rePos.dataset.old;
-          imPos.removeAttribute("disabled");
-          delete imPos.dataset.leaveDisabled;
-          imPos.value = imPos.dataset.old;
-        }
-      });
-			random.addEventListener("click", function() {
-				setVar('re', Math.random()*2 - 1);
-				setVar('im', Math.random()*2 - 1);
-				updateFractal();
-			});
-			randomColors.addEventListener('click', function() {
-				var b = Math.floor(Math.random()*15);
-				var f = Math.floor(Math.random()*15);
-				var j = Math.floor(Math.random()*15);
-				setVar('a', Math.floor(-Math.random()*10 - 15));
-				setVar('b', b);
-				setVar('c', Math.floor(-Math.random()*10 - 15));
-				setVar('d', b + Math.ceil(Math.random()*15));
-				setVar('e', Math.floor(-Math.random()*10 - 15));
-				setVar('f', f);
-				setVar('g', Math.floor(-Math.random()*10 - 15));
-				setVar('h', f + Math.ceil(Math.random()*15));
-				setVar('i', Math.floor(-Math.random()*10 - 15));
-				setVar('j', j);
-				setVar('k', Math.floor(-Math.random()*10 - 15));
-				setVar('l', j + Math.ceil(Math.random()*15));
-				updatePalette();
-				updateFractal();
-			});
-      document.querySelector("#knob-panel").addEventListener("keydown", function(e) {
-        if (!stuck && e.keyCode == 13) { // enter
-          updatePalette();
-          updateFractal();
-        }
-      });
-      document.querySelector("#fractal").addEventListener("click", function(e) {
-        // find the relative % location of the click, where the exact middle is 0, 0
-        var xp =     2*e.offsetX / e.target.offsetWidth - 1;
-        var yp = 1 - 2*e.offsetY / e.target.offsetHeight;
-        var scale = Math.pow(2, -vars.scale / 2);
-        // find the width of the viewport in units
-        var xDelta = yDelta = scale;
-        if (vars.width >= vars.height) {
-          xDelta *= vars.width/vars.height;
-        } else {
-          yDelta *= vars.height/vars.width;
-        }
-        setVar("rePos", +vars.rePos + xp * xDelta);
-        setVar("imPos", +vars.imPos + yp * yDelta);
-        center.checked = false;
-        delete rePos.dataset.leaveDisabled;
-        delete imPos.dataset.leaveDisabled;
-        updateFractal();
-      });
-      document.querySelector("#reset-to-origin").addEventListener("click", function() {
-        if (vars.rePos == 0 && vars.imPos == 0) return;
-        setVar("rePos", 0);
-        setVar("imPos", 0);
-        updateFractal();
-      });
-      document.querySelector("#zoom0").addEventListener("click", function() {
-        if (vars.scale == 0) return;
-        setVar("scale", 0);
-        updateFractal();
-      });
-		});
-	</script>
+	<script src="/static/fractal.js"></script>
 </body>
